# metamaska

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.py  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
dataset/: dataset_sample.json
docs/: api.md  installation.md  usage.md
flask-api/: app.py
installation/: index.html
metamaska/: __init__.py  cli.py  metamaska.py  payload_classifier.py  utils.py
notebooks/model/: modeling.ipynb
search/: search_index.json
tests/: test_cli.py  test_metamaska.py  test_payload_classifier.py  test_utils.py
usage/: index.html
